# Prog3-WS2021

Snippets/02_snippets/HelloWorld/: Hello.cpp
Snippets/05_Snippets/begin/: ClassesAndObjects.cpp  Person.cpp  Person.hpp
Snippets/05_Snippets/end/: CMakeLists.txt  ClassesAndObjects.cpp  Person.cpp  Person.hpp  User.cpp  User.hpp
Snippets/06_Snippets/: CMakeLists.txt
Snippets/06_Snippets/For/: For.cpp
Snippets/06_Snippets/If/: If.cpp
Snippets/06_Snippets/While/: While.cpp
Test/: CMakeLists.txt
Test/04/: BasicTypes.cpp  CMakeLists.txt
kanban-board-app/src/: index.html  styles.scss
kanban-board-app/src/app/: app.component.html  app.component.scss  app.module.ts
kanban-board-app/src/lib/data-access/models/: boardModel.ts  columnModel.ts  itemModel.ts
kanban-board-app/src/lib/ui/board/: board.component.html  board.component.scss  board.component.ts
kanban-board-app/src/lib/ui/column/: column.component.html  column.component.scss  column.component.ts
kanban-board-app/src/lib/ui/item/: item.component.html  item.component.scss  item.component.ts
kanban-board-app/src/lib/ui/toolbar/: toolbar.component.html  toolbar.component.scss  toolbar.component.ts
kanban-board-service/src/Api/Parser/: JsonParser.cpp  JsonParser.hpp
kanban-board-service/src/Repository/SQLite/: BoardRepository.cpp  BoardRepository.hpp
